[gd_scene load_steps=9 format=2]

[ext_resource path="res://Enemy/fixed_canon.gd" type="Script" id=1]
[ext_resource path="res://sprites/fixed_cannon_holder.png" type="Texture" id=2]
[ext_resource path="res://sprites/fixed_cannon_head.png" type="Texture" id=3]
[ext_resource path="res://sprites/nozzel.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18.4177, 20.2896 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.3491, 20.2896 )

[sub_resource type="CircleShape2D" id=3]
radius = 23.0

[sub_resource type="CircleShape2D" id=4]
radius = 26.0

[node name="FixedCanon" type="StaticBody2D" groups=[
"enemy",
"wall",
]]
script = ExtResource( 1 )

[node name="body_sprite" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.3 )
texture = ExtResource( 2 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 29.034, 20.8264 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2( 28.6131, 41.9417 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 28.8882, 72.2719 )
shape = SubResource( 3 )

[node name="head_rotetor" type="Node2D" parent="."]
position = Vector2( 28.8882, 72.2719 )

[node name="BulletPosition" type="Position2D" parent="head_rotetor"]
position = Vector2( -36.5193, 0 )
rotation = -1.5708

[node name="BulletContainer" type="Node" parent="head_rotetor/BulletPosition"]

[node name="HitArea" type="Area2D" parent="head_rotetor" groups=[
"enemy",
"hitarea",
]]

[node name="head_sprite" type="Sprite" parent="head_rotetor/HitArea"]
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 3 )

[node name="nozzel" type="Sprite" parent="head_rotetor/HitArea"]
position = Vector2( -20.5193, 0 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="head_rotetor/HitArea"]
shape = SubResource( 4 )

[node name="FireRateTimer" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="head_rotetor/HitArea" to="." method="_on_HitArea_area_entered"]
[connection signal="timeout" from="FireRateTimer" to="." method="_on_FireRateTimer_timeout"]
